--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django
-Pillow
-djangorestframework
-psycopg2
+Django == 5.0.3
+Pillow == 10.2.0
+djangorestframework == 3.15.0
+psycopg2-binary == 2.9.9
+python-dotenv == 1.0.1
